fix overflow when loading

--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,7 @@ html, body {
   margin: 0;
   padding: 0;
   width: 100%;
+  overflow: hidden;
 }
 
 /* Changement de la couleur de la bar de navigation du fullpage */
